tests/baselines/reference/unusedClassesinModule1.errors.txt
tests/cases/compiler/unusedClassesinModule1.ts(2,5): error TS6196: 'Calculator' is declared but never used.


==== tests/cases/compiler/unusedClassesinModule1.ts (1 errors) ====
    module A {
        class Calculator {
        ~~~~~~~~~~~~~~~~
!!! error TS6196: 'Calculator' is declared but never used.
            public handelChar() {
            }
        }
    }